# parcial1-info2

./: INFORME DESAFIO1.docx  analisis.docx  ~$alisis.docx
build-parcial-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-parcial-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-d9b137858f330e202d78.json  cmakeFiles-v1-ceb08889f9157f05df8f.json  codemodel-v2-47c62fd95e46d3dac09f.json  directory-.-Debug-03c677f10be6092e2be3.json  index-2024-04-01T18-07-47-0605.json  target-parcial-Debug-dc1f255a26373a5834c2.json
build-parcial-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-parcial-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: _mingw.h.B066CCE5A67D9548.idx  main.cpp.002B3E31E3571CA9.idx
build-parcial-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-parcial-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-6442a98d078c331d1ec2.json  cmakeFiles-v1-610b7b018110b130a74f.json  codemodel-v2-17df9512542af35a3ef5.json  directory-.-Debug-df631b8eec90e211b553.json  index-2024-04-02T04-54-01-0950.json  target-parcial-Debug-7f39874cff5cfadebcb5.json
parcial/: .gitignore  CMakeLists.txt  funciones.cpp  funciones.h  main.cpp
